Update and rename home-page to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Projects</h2>
 
     <div>
-      <a href="Personal Project/index1.html" target="_blank">Personal Project</a>
+      <a href="personal-project/index.html" target="_blank">Personal Project</a>
       <a href="CSS Zen Garden/index.html" target="_blank">CSS Zen Garden</a>
       <a href="JS Project/index.html" target="_blank">JS Project</a>
     </div>
