--- a/home-page/index.html
+++ b/home-page/index.html
@@ -1,1 +1,24 @@
+<html lang="en"><head>
+    <meta charset="UTF-8">
+    <title>Landing Page</title>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=spectral" rel="stylesheet">
+</head>
 
+<body>
+  <header> 
+    <h1>CSIS 304</h1>
+    <p>Mei-Ling Fullhart</p>
+</header>
+
+  <main>
+    <h2>Projects</h2>
+
+    <div>
+      <a href="personal-project/index.html" target="_blank">Personal Project</a>
+      <a href="CSS Zen Garden/index.html" target="_blank">CSS Zen Garden</a>
+      <a href="JS Project/index.html" target="_blank">JS Project</a>
+    </div>
+  </main>
+
+</body></html>
