--- a/home-page/index.html
+++ b/home-page/index.html
@@ -16,8 +16,8 @@
 
     <div>
       <a href="personal-project/index.html" target="_blank">Personal Project</a>
-      <a href="CSS Zen Garden/index.html" target="_blank">CSS Zen Garden</a>
-      <a href="JS Project/index.html" target="_blank">JS Project</a>
+      <a href="CSS-Zen-Garden/index.html" target="_blank">CSS Zen Garden</a>
+      <a href="JS-Project/index.html" target="_blank">JS Project</a>
     </div>
   </main>
 
